--- a/css/langeland.css
+++ b/css/langeland.css
@@ -35,7 +35,7 @@ h6 {
     height: 100%;
 }
 #lang-web-cam{
-class="img-responsive"
+
     display: block;
     
 }
@@ -122,7 +122,6 @@ margin-right: auto;
 }
 
 #track {
-    100%;
 }
 
 #map {
@@ -132,10 +131,38 @@ margin-right: auto;
 }
 
 #trackinfo-container {
+            z-index: 1000;
 			position: absolute;
+            min-width: 400px;
+            width: 30%;
 		}
 
 /* OLD STUFF */
+
+
+
+
+		
+	@media(min-width:767px) {
+		.navbar {
+			padding: 20px 0;
+			border-bottom: 0;
+			letter-spacing: 1px;
+			background: 0 0;
+			-webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
+			-moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
+			transition: background .5s ease-in-out,padding .5s ease-in-out;
+		}
+
+		.top-nav-collapse {
+			padding: 0 50px ;
+			background-color: #1d1d1d;
+		}
+
+		.navbar-custom.top-nav-collapse {
+			border-bottom: 1px solid rgba(255,255,255,.3);
+		}
+	}
 
 
 
@@ -224,6 +251,7 @@ margin-right: auto;
 	.track-container {
 		float: right;
 		position: relative;
+        min-height: 60px;
 		width: 100%;
 		background-color: rgba(230,230,230,.85);
 	   border-bottom-width:1px;
