--- a/css/langeland.css
+++ b/css/langeland.css
@@ -134,7 +134,8 @@ margin-right: auto;
             z-index: 1000;
 			position: absolute;
             min-width: 400px;
-            width: 30%;
+            background-color: rgba(230,230,230,.85);
+            width: 25%;
 		}
 
 /* OLD STUFF */
@@ -229,7 +230,7 @@ margin-right: auto;
 
 
 	.track-section {
-		background: rgba(230,230,230,.85);
+		
 		text-align: left;
 		color: #121212;
 		z-index: 11000;
