--- a/css/langeland.css
+++ b/css/langeland.css
@@ -49,7 +49,12 @@ h6 {
 .tracks-info-text {
     font-size: 16px;
 }
-
+#about {
+    display: table;
+    padding-top: 100px;
+    min-height: 60%;
+    margin-bottom: 50px;
+}
 
 #info-body {
     padding: 20px;
