--- a/css/langeland.css
+++ b/css/langeland.css
@@ -79,6 +79,56 @@ width: 100%;
 height: 100%;
 }
 
+#partners {
+    overflow: auto;
+  padding-top: 100px;
+    margin-bottom: 50px;
+}
+.sponsor-image {
+margin-left:auto;
+margin-right:auto;
+max-height: 200px;
+}
+
+#main-partners {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    overflow:auto;
+}
+
+#stadion-sponsors {
+    padding-top: 50px;
+    margin-top: 50px;
+}
+
+#shops {
+
+  padding-top: 50px;
+}
+
+#info-body {
+    padding: 20px;
+    margin-bottom: 20px;
+}
+
+#header {
+    font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+#header h1 {
+    font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+#contact {
+    min-height: 60%;
+    color: #dfdfdf;
+}
+
+#camera {
+display: table;
+position: relative;
+width: 100%;
+height: 100%;
+}
+
 #home-info {
     margin-top: 250px;
 }
